--- a/source/index.html
+++ b/source/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Организация походов в горы и обучение туристов: учитесь безопасным техникам выживания, планируйте походы и получайте незабываемые впечатления от природы!">
   <meta name="keywords" content="походы, горы, обучение туристов, туризм, выживание, планирование походов, горные маршруты, активный отдых">
+  <meta name="theme-color" content="#0266c1">
 
   <title>Lifetour</title>
 
@@ -596,7 +597,7 @@
               <span class="form__label-text">Телефон</span>
             </label>
             <label class="form__label">
-              <input class="form__field form__field--email" type="email" name="email" id="email" placeholder="email@email.ru" pattern="^\S+@\S+\.\S+$" title="Следуйте указанному формату: email@email.ru или email@почта.ру." oninvalid="document.querySelector('input[type=email]').style.border = '1px solid #ff121f';" required>
+              <input class="form__field form__field--email" type="email" name="email" id="email" placeholder="email@email.ru" pattern="^\S+@\S+\.\S+$" title="email@email.ru или email@почта.ру." oninvalid="document.querySelector('input[type=email]').style.border = '1px solid #ff121f';" required>
               <span class="form__label-text">Email</span>
             </label>
             <button class="form__button button--primary button" type="submit">Отправить</button>
